--- a/Web-Nhom5/Web.config
+++ b/Web-Nhom5/Web.config
@@ -55,8 +55,8 @@
     </modules>
   </system.webServer>
   <connectionStrings>
-    <add name="TTTinHocEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VIET\SQLEXPRESS;initial catalog=TTTinHoc;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    
+  <add name="TTTinHocEntities" connectionString="metadata=res://*/Models.TTTinHoc.csdl|res://*/Models.TTTinHoc.ssdl|res://*/Models.TTTinHoc.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=TTTinHoc;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
